# CosmosNova

./: .gitignore  .gitmodules  CMakeLists.txt
App/: CMakeLists.txt
App/src/: main.cpp
CosmosNova/: CMakeLists.txt
CosmosNova/Cosmos/: Camera.cpp  CosmosBase.h  ElementBuffer.cpp  Engine.cpp  Engine.h  EngineEnv.h  Logger.cpp  Mesh.cpp  Model.cpp  OpenGLDebugger.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Time.cpp  Transform.cpp  VertexArray.cpp  VertexBuffer.cpp  glad.cpp
CosmosNova/Cosmos/Core/: Engine.h  Log.h  Logger.h  OpenGLDebugger.h
CosmosNova/Cosmos/Math/: Time.h
CosmosNova/Cosmos/Renderer/: Camera.h  Mesh.h  Model.h  Renderer.h  Texture.h  Transform.h
CosmosNova/Cosmos/Shader/: Shader.h
CosmosNova/Cosmos/Vertex/: ElementBuffer.h  Vertex.h  VertexArray.h  VertexBuffer.h
Shader/: fragment.glsl  vertex.glsl
vendors/glad/glad/: glad.h
vendors/glm/: manual.md  readme.md
vendors/json/json/: json.h
